--- a/tex/references.bib
+++ b/tex/references.bib
@@ -136,6 +136,13 @@
   edition = {2},
   publisher = {Chapman and Hall/CRC},
 }
+@Manual{consulting,
+  title = {Analyse von Zungenkonturen zur Untersuchung der Konsonantenanpassung an den Vokalkontext},
+  author = {Le, L. and Szydlo, M.},
+  year = {2015},
+  organization = {Ludwig-Maximilians-Universität München},
+  note = {Projektbericht Statistisches Consulting}
+}
 @Manual{elasdics,
   title = {elasdics: Elastic Analysis of Sparse, Dense and Irregular Curves},
   author = {Steyer, L.},
