--- a/tex/sections/2-theory.tex
+++ b/tex/sections/2-theory.tex
@@ -32,15 +32,15 @@ All considerations will be restricted to the case of open curves, with possible 
 
 \section{Equivalence Classes and Shape}
 \label{sec:2-shape}
-As mentioned in the introduction, shape is usually defined by its invariance under the transformations of scaling, translation, and rotation.
-When considering the shape of curves, we additionally have to take into account invariance with respect to re-parametrisation.
+As mentioned in the introduction, shape is usually defined by its in-variance under the transformations of scaling, translation, and rotation.
+When considering the shape of curves, we additionally have to take into account in-variance with respect to re-parametrisation.
 This can be seen, by noting that the curves $\beta(t)$ and $\beta(\gamma(t))$, with some re-parametrisation or \textit{warping function} $\gamma : [0,1] \rightarrow [0,1]$ monotonically increasing and differentiable, have the same image and therefore represent the same geometrical object (see \cref{fig:1-warp}).
 We can say that the actions of translation, scaling, rotation, and re-parametrisation are \textit{equivalence relations} with respect to shape, as each action leaves the shape of the curve untouched and only changes the way it is represented.
 The shape of a curve can then be defined as the respective \textit{equivalence class}, i.e. the set of all possible shape preserving transformations of the curve.
-As two equivalence classses are neccessarily either disjoint or identical, we can consider two curves as having the same shape, if they are elements of the same equivalence class \parencite[see][40]{SrivastavaKlassen2016}.
+As two equivalence classes are necessarily either disjoint or identical, we can consider two curves as having the same shape, if they are elements of the same equivalence class \parencite[see][40]{SrivastavaKlassen2016}.
 
 When defining an equivalence class, one has to first consider how each individual transformation acts on a planar curve $\beta : [0,1] \rightarrow \mathbb{C}$.
-This is usually done using the notion of \textit{group actions} and \textit{product groups}, with the later desciribing multiple transformations acting at once.
+This is usually done using the notion of \textit{group actions} and \textit{product groups}, with the later describing multiple transformations acting at once.
 A brief introduction to group actions may be found in \cite[Chap.\ 3]{SrivastavaKlassen2016}.
 
 \begin{itemize}[leftmargin=0.75cm]
@@ -65,7 +65,7 @@ The joint action defined using this ordering is called an \emph{Euclidean simila
 Considering the action of \emph{warping} or re-parametrization, we can note that it necessarily commutes with all Euclidean similarity transformations as those only act on the image of $\beta$, while the former only acts on the parametrization.
 Putting everything together we can give a formal definition of the shape of a planar curve as the following equivalence class:
 \begin{definition}[Shape]
-  The \emph{shape} of an absolutely continous planar curve $\beta \in \mathcal{AC}([0,1], \mathbb{C})$ is given by its equivalence class $[\beta]$ with respect to all Euclidean similarity transformations and re-parametrizations
+  The \emph{shape} of an absolutely continuous planar curve $\beta \in \mathcal{AC}([0,1], \mathbb{C})$ is given by its equivalence class $[\beta]$ with respect to all Euclidean similarity transformations and re-parametrizations
   $$ [\beta] = \left\{\lambda e^{i\theta}(\beta \circ \gamma) + \xi\,|\, \xi \in \mathbb{C},\, \lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi),\, \gamma \in \Gamma\right\}. $$
   The \emph{shape space} $\mathcal{S}$ is then given by $\mathcal{S} = \left\{[\beta]\,|\,\beta \in \mathcal{AC}([0,1],\, \mathbb{C})\right\}$. 
 \end{definition}
@@ -81,21 +81,21 @@ To illustrate this, let us first discuss each type of shape-preserving transform
 Consider two equivalence classes with respect to translation $[\beta_1]_\text{Trl}, [\beta_2]_\text{Trl}$.
 They might be uniquely mapped to their centered elements $\widetilde\beta^\text{Trl}_i = \beta_i - \overline{\beta}_i \in [\beta_i]_\text{Trl}$ for $i=1,2$.
 The distance between the centered elements then defines a distance that is invariant under translation $d_\text{Trl}([\beta_1]_\text{Trl}, [\beta_2]_\text{Trl}) = \norm{\widetilde\beta^\text{Trl}_1 - \widetilde\beta^\text{Trl}_2}$, which is equal to the minimal distance when optimizing over the translation group.
-Similarly, a distance that is invariant under scaling might be defined over the normalized elements $\widetilde\beta^\text{Scl}_i = \frac{\beta_i}{\norm{\beta_i}} \in [\beta_i]_\text{Scl}$ for $i = 1,2$, as $d_\text{Scl}([\beta_1]_\text{Scl}, [\beta_2]_\text{Scl}) = \norm{\widetilde\beta^\text{Scl}_1 - \widetilde\beta^\text{Scl}_i}$.
-When considering invariance under rotation, we can first note that no \enquote{standardization} procedure compareable to normalizing and centering exists for the case of rotation.
+Similarly, a distance that is invariant under scaling might be defined over the normalised elements $\widetilde\beta^\text{Scl}_i = \frac{\beta_i}{\norm{\beta_i}} \in [\beta_i]_\text{Scl}$ for $i = 1,2$, as $d_\text{Scl}([\beta_1]_\text{Scl}, [\beta_2]_\text{Scl}) = \norm{\widetilde\beta^\text{Scl}_1 - \widetilde\beta^\text{Scl}_i}$.
+When considering in-variance under rotation, we can first note that no \enquote{standardisation} procedure comparable to normalising and centring exists for the case of rotation.
 Instead of mapping $[\beta]_\text{Rot}$ to a fixed representative, we therefore have to identify an appropriate representative on a case-by-case basis.
 This can be achieved by defining the distance as the minimal distance $d_\text{Rot}([\beta_1]_\text{Rot}, [\beta_2]_\text{Rot}) = \min_{\widetilde\beta^\text{Rot}_2 \in [\beta_2]_\text{Rot}} \norm{\beta_1 - \widetilde\beta^\text{Rot}_2} = \min_{\theta \in [0,2\pi)} \norm{\beta_1 - e^{i\theta}\beta_2}$, when keeping one curve fixed and rotationally aligning the other curve \parencite[see e.g][]{Stoecker2021}.
 
 
 \subsubsection*{The Full Procrustes Distance}
 The three approaches can be combined to formulate the family of \emph{Procrustes} distances, which are invariant under Euclidean similarity transform.
-The \emph{partial Procrustes distance} is defined as the minimizing distance $d_{PP}([\beta_1]_\text{Eucl}, [\beta_2]_\text{Eucl}) = \min_{\theta \in [0,2\pi)} \,\, \norm{\widetilde\beta_1 - e^{i\theta} \widetilde\beta_2}$, when rotationally aligning the centered and normalized curves $\widetilde\beta_i= \frac{\beta_i - \overline\beta_i}{\norm{\beta_i - \overline\beta_i}}$, $i=1,2$.
+The \emph{partial Procrustes distance} is defined as the minimising distance $d_{PP}([\beta_1]_\text{Eucl}, [\beta_2]_\text{Eucl}) = \min_{\theta \in [0,2\pi)} \,\, \norm{\widetilde\beta_1 - e^{i\theta} \widetilde\beta_2}$, when rotationally aligning the centred and normalised curves $\widetilde\beta_i= \frac{\beta_i - \overline\beta_i}{\norm{\beta_i - \overline\beta_i}}$, $i=1,2$.
 On the other hand, the \emph{full Procrustes distance} (see \cref{def:2-fpdist}) includes an additional alignment over scaling, leading to a slightly different geometrical interpretation \parencite[see][77-78]{DrydenMardia2016}.
 Finally, the \emph{Procrustes distance} given by $d_P([\beta_1]_\Eucl, [\beta_2]_\Eucl) = \arccos{\abs{\langle \widetilde \beta_1, \widetilde \beta_2 \rangle}}$ defines a geodesic distance in the space of curves modulo Euclidean similarity transforms.
 As earlier approaches to elastic shape mean estimation, such as \cite{SrivastavaEtAl2011}, have been focused on calculating \emph{intrinsic} means, they mostly use the Procrustes distance.
 Although no distance definition is inherently better than the other, in the context of mean estimation for sparse and irregular curves the full Procrustes distance might be slightly more suitable, as the additional scaling alignment offers more flexibility in a setting where---as will become clear later on---calculating a norm $\norm{\beta} = \int_0^1 \norm{\beta(t)}\, dt$ may already present a challenge.
 In this thesis, we will therefore only consider the full Procrustes distance and calculate \emph{extrinsic} shape means.
-Note that in \cref{def:2-fpdist} the optimization over scaling $\lambda \in \mathbb{R}^+$ and rotation $\theta \in [0,2\pi)$ was combined into a single optimization over \emph{rotation and scaling} $\omega = \lambda e^{i\theta} \in \mathbb{C}$.
+Note that in \cref{def:2-fpdist} the optimisation over scaling $\lambda \in \mathbb{R}^+$ and rotation $\theta \in [0,2\pi)$ was combined into a single optimisation over \emph{rotation and scaling} $\omega = \lambda e^{i\theta} \in \mathbb{C}$.
 \begin{definition}[Full Procrustes distance]
   \label{def:2-fpdist}
   The \emph{full Procrustes distance} for two equivalence classes $[\beta_1]_\text{Eucl}$, $[\beta_2]_\text{Eucl}]$ is defined as
@@ -103,7 +103,7 @@ Note that in \cref{def:2-fpdist} the optimization over scaling $\lambda \in \mat
     \label{eq:2-fpdist-def}
     d_{FP}([\beta_1]_\text{Eucl}, [\beta_2]_\text{Eucl}) = \min_{\omega \in \mathbb{C}} \,\, \norm{\widetilde\beta_1 - \omega \widetilde\beta_2}
   \end{equation}
-  with centered and normalized representatives $\widetilde\beta_i = \frac{\beta_i - \overline\beta_i}{\norm{\beta_i - \overline\beta_i}}$.
+  with centered and normalised representatives $\widetilde\beta_i = \frac{\beta_i - \overline\beta_i}{\norm{\beta_i - \overline\beta_i}}$.
 \end{definition}
 
 \noindent By using a similar proof for complex-valued landmark data in \cite[Chap~8]{DrydenMardia2016} as a blueprint, we can show that \cref{eq:2-fpdist-def} has the following analytical solution.
@@ -124,7 +124,7 @@ Note that in \cref{def:2-fpdist} the optimization over scaling $\lambda \in \mat
   \end{proof}
 \end{lemma}
 
-\noindent \cref{fig:2-pfit} shows an example of two curves that where aligned by minimizing their full Procrustes distance using \cref{lem:2-fpdist}.
+\noindent \cref{fig:2-pfit} shows an example of two curves that where aligned by minimising their full Procrustes distance using \cref{lem:2-fpdist}.
 
 \begin{figure}
   \centering
@@ -137,7 +137,7 @@ Note that in \cref{def:2-fpdist} the optimization over scaling $\lambda \in \mat
     \inputTikz{2-pfit-aligned}
   \end{subfigure}
   \caption{
-    Procrustes fit (right; normalized and centered) of two example curves (left).
+    Procrustes fit (right; normalised and centred) of two example curves (left).
     The Procrustes fit of $\beta_2$ (green) onto $\beta_1$ (blue) is given by $\widetilde\beta_2^P = \langle \widetilde\beta_2,\, \widetilde\beta_1 \rangle \widetilde\beta_2$.
     Data: See \cref{fig:1-shape}.}
   \label{fig:2-pfit}
@@ -145,14 +145,14 @@ Note that in \cref{def:2-fpdist} the optimization over scaling $\lambda \in \mat
 
 
 \subsubsection*{The Elastic Distance}
-When considering warping, we would like to do something similar to rotation in trying to find an optimal warping alignment between two curves $\beta_1$, $\beta_2$ by optimizing their distance over the space of warping functions $\Gamma$.
-A usual choice would be to optimize over the $\mathbb{L}^2$-distance by $\inf_{\gamma \in \Gamma} \norm{\beta_1 - \beta_2 \circ \gamma}_{\mathbb{L}^2}$, where the $\mathbb{L}^2$-norm and scalar-product are given by $\norm{f}_{\mathbb{L}^2} = \sqrt{\int_0^1 \overline{f(t)} f(t) \dt}$ and $\langle f,g\rangle_{\mathbb{L}^2} = \int_0^1 \overline{f(t)} g(t) \dt$ with $\overline{z} = \Re(z) - \iu \Im(z)$ denoting the complex conjugate of $z \in \mathbb{C}$.
-However, as optimizing over re-parametrization using the $\mathbb{L}^2$-distance has problems relating to the so called \emph{pinching effect} and \emph{inverse-inconsistency}, this does not define a proper distance.
-Here, the later means that aligning the parametrization of one curve to another by $\inf_{\gamma \in \Gamma} \norm{\beta_1 - \beta_2 \circ \gamma}_{\mathbb{L}^2}$ may yield different results than $\inf_{\gamma \in \Gamma} \norm{\beta_2 - \beta_1 \circ \gamma}_{\mathbb{L}^2}$ \parencite[see][88-90]{SrivastavaKlassen2016}.
+When considering warping, we would like to do something similar to rotation in trying to find an optimal warping alignment between two curves $\beta_1$, $\beta_2$ by optimising their distance over the space of warping functions $\Gamma$.
+A usual choice would be to optimise over the $\mathbb{L}^2$-distance by $\inf_{\gamma \in \Gamma} \norm{\beta_1 - \beta_2 \circ \gamma}_{\mathbb{L}^2}$, where the $\mathbb{L}^2$-norm and scalar-product are given by $\norm{f}_{\mathbb{L}^2} = \sqrt{\int_0^1 \overline{f(t)} f(t) \dt}$ and $\langle f,g\rangle_{\mathbb{L}^2} = \int_0^1 \overline{f(t)} g(t) \dt$ with $\overline{z} = \Re(z) - \iu \Im(z)$ denoting the complex conjugate of $z \in \mathbb{C}$.
+However, as optimising over re-pasteurisation using the $\mathbb{L}^2$-distance has problems relating to the so called \emph{pinching effect} and \emph{inverse-inconsistency}, this does not define a proper distance.
+Here, the later means that aligning the pasteurisation of one curve to another by $\inf_{\gamma \in \Gamma} \norm{\beta_1 - \beta_2 \circ \gamma}_{\mathbb{L}^2}$ may yield different results than $\inf_{\gamma \in \Gamma} \norm{\beta_2 - \beta_1 \circ \gamma}_{\mathbb{L}^2}$ \parencite[see][88-90]{SrivastavaKlassen2016}.
 
 A solution proposed in \cite{SrivastavaEtAl2011} is to replace the $\mathbb{L}^2$-distance with an \emph{elastic distance}, on which warping acts by isometry.
 Calculation of this metric, the Fisher-Rao Riemannian metric \parencite{Rao1945}, can be greatly simplified by using the \emph{square-root-velocity} (SRV) framework, as the Fisher-Rao metric of two curves can be equivalently calculated as the $\mathbb{L}^2$-distance of their respective SRV curves.
-As this SRV representation makes use of derivatives, any curve $\beta$ that has a SRV curve must fulfill some kind of differentiability constraint.
+As this SRV representation makes use of derivatives, any curve $\beta$ that has a SRV curve must fulfil some kind of differentiability constraint.
 Here it is enough to consider only curves that are absolutely continuous $\beta \in \mathcal{AC}([0,1],\, \mathbb{C})$, which in particular means that the original curves do not have to be smooth but might also be, e.g.,piecewise linear \parencite[see][91]{SrivastavaKlassen2016}.
 Note that, because of the use of derivatives, any elastic analysis of curves will automatically be translation invariant as well.
 See \cref{fig:2-srv} for an example SRV curve of a digit \enquote*{3}.
@@ -193,12 +193,12 @@ See \cref{fig:2-srv} for an example SRV curve of a digit \enquote*{3}.
       \inputTikz{2-srvY}
     \end{subfigure}
   \end{subfigure}
-  \caption{SRV function (left) of the planar curve in \cref{fig:2-curve} with respective SRV coordinate functions (right). Note that the polygon-like look of the SRV curve is an artifact of the (linear) smoothing applied to the original data on SRV level (see \cref{app:a-smooth}). Data: see \cref{fig:1-shape}.}
+  \caption{SRV function (left) of the planar curve in \cref{fig:2-curve} with respective SRV coordinate functions (right). Note that the polygon-like look of the SRV curve is an artefact of the (linear) smoothing applied to the original data on SRV level (see \cref{app:a-smooth}). Data: see \cref{fig:1-shape}.}
   \label{fig:2-srv}
 \end{figure}
 
-\noindent Unlike the optimization over rotation in the definition of the full Procrustes distance, no analytical solution exists for the optimization over warping in \cref{eq:2-eldist-def}.
-Instead, it is usually solved numerically, by minimizing a cost function $H[\gamma] = \int_0^1 \norm{q_1(t) - q_2\left( \gamma(t) \right) \sqrt{\dot\gamma(t)}} \dt$ using a dynamic programming algorithm \parencite[see e.g.][152]{SrivastavaKlassen2016} or gradient based methods \parencite[see e.g.][]{Steyer2021}.
+\noindent Unlike the optimisation over rotation in the definition of the full Procrustes distance, no analytical solution exists for the optimisation over warping in \cref{eq:2-eldist-def}.
+Instead, it is usually solved numerically, by minimising a cost function $H[\gamma] = \int_0^1 \norm{q_1(t) - q_2\left( \gamma(t) \right) \sqrt{\dot\gamma(t)}} \dt$ using a dynamic programming algorithm \parencite[see e.g.][152]{SrivastavaKlassen2016} or gradient based methods \parencite[see e.g.][]{Steyer2021}.
 
 
 \subsubsection*{The Elastic Full Procrustes Distance}
@@ -232,9 +232,9 @@ The result is irrespective of the order of applying the transformations.
 It is in particular noteworthy, that warping the original curve changes the image of the SRV curve.
 
 Going forward, we will work in the SRV framework and combine the elastic distance with the full Procrustes distance.
-While the full Procrustes distance (see \cref{def:2-fpdist}) was defined over the normalized and centered curves, the SRV curves are already translation invariant so additional centering is not necessary (see \cref{lem:2-transf} i.).
-We will therefore define the \emph{elastic full Procrustes distance} as the minimal distance, when aligning the scaling, rotation, and warping of the normalized SRV curves $\widetilde q = \frac{q}{\norm{q}}$.
-Note that when the original curve $\beta$ is of unit length $L[\beta] = \int_0^1 \abs{\dot\beta(t)} \dt = 1$ the SRV curve $q = \frac{\dot\beta}{\norm{\dot\beta}}$ will be normalized, as 
+While the full Procrustes distance (see \cref{def:2-fpdist}) was defined over the normalised and centred curves, the SRV curves are already translation invariant so additional centring is not necessary (see \cref{lem:2-transf} i.).
+We will therefore define the \emph{elastic full Procrustes distance} as the minimal distance, when aligning the scaling, rotation, and warping of the normalised SRV curves $\widetilde q = \frac{q}{\norm{q}}$.
+Note that when the original curve $\beta$ is of unit length $L[\beta] = \int_0^1 \abs{\dot\beta(t)} \dt = 1$ the SRV curve $q = \frac{\dot\beta}{\norm{\dot\beta}}$ will be normalised, as 
 \begin{equation}
   \label{eq:2-norm}
   \norm{q} = \sqrt{ \int_0^1 |q(t)|^2 \dt} = \sqrt{\int_0^1 |\dot{\beta}(t)| \dt} = \sqrt{L[\beta]}.
@@ -247,42 +247,42 @@ Note that when the original curve $\beta$ is of unit length $L[\beta] = \int_0^1
       \label{eq:2-elfpdist-def}
       d([\beta_1], [\beta_2]) = \inf_{\omega \in \mathbb{C},\, \gamma \in \Gamma} \,\, \norm{\widetilde q_1 - \omega (\widetilde q_2 \circ \gamma) \sqrt{\dot\gamma}}_{\mathbb{L}^2}\,,
     \end{equation}
-    with normalized SRV representation $\widetilde q_{i} = \frac{q_{i}}{\norm{q_{i}}} \in \mathbb{L}^2([0,1], \mathbb{C})$, where $q_i$ is the SRV representation of $\beta_i$, for $i = 1,2$.
+    with normalised SRV representation $\widetilde q_{i} = \frac{q_{i}}{\norm{q_{i}}} \in \mathbb{L}^2([0,1], \mathbb{C})$, where $q_i$ is the SRV representation of $\beta_i$, for $i = 1,2$.
 \end{definition}
 
-\noindent To calculate the elastic full Procrustes distance, we need to solve the joint optimization problem over $\mathbb{C} \times \Gamma$
+\noindent To calculate the elastic full Procrustes distance, we need to solve the joint optimisation problem over $\mathbb{C} \times \Gamma$
 \begin{equation}
   \label{eq:2-elfpdist-opt}
   \left(\omega^\text{opt},\, \gamma^\text{opt} \right) = \argmin_{\omega \in \mathbb{C},\, \gamma \in \Gamma} \,\, \norm{\widetilde q_1 - \omega (\widetilde q_2 \circ \gamma) \sqrt{\dot\gamma}}_{\mathbb{L}^2}\,,
 \end{equation}
-so that the elastic full Procrustes distance is given as the $\mathbb{L}^2$-distance of the optimally aligned normalized SRV curves
+so that the elastic full Procrustes distance is given as the $\mathbb{L}^2$-distance of the optimally aligned normalised SRV curves
 \begin{equation}
   d([\beta_1], [\beta_2]) = \norm{\widetilde q_1 - \omega^\text{opt} ( \widetilde q_2 \circ \gamma^\text{opt}) \sqrt{\dot\gamma^\text{opt}}}_{\mathbb{L}^2}\,.
 \end{equation}
-Following \cite{SrivastavaEtAl2011} we adapt an iterative procedure, where in each step $k$ we optimize over the sets of parameters individually, iterating through both solutions until some form of convergence is reached.
-Let us first consider the optimization over $\omega \in \mathbb{C}$ for a fixed $\gamma^{(k)} \in \Gamma$.\todo{$\Gamma$ nicht vollständig.}
+Following \cite{SrivastavaEtAl2011} we adapt an iterative procedure, where in each step $k$ we optimise over the sets of parameters individually, iterating through both solutions until some form of convergence is reached.
+Let us first consider the optimisation over $\omega \in \mathbb{C}$ for a fixed $\gamma^{(k)} \in \Gamma$.\todo{$\Gamma$ nicht vollständig.}
 \begin{equation}
   \label{eq:2-elfpdist-rot}
   \omega^\text{(k)}= \argmin_{\omega \in \mathbb{C}}\,\, \norm{\widetilde q_1 - \omega (\widetilde q_2 \circ \gamma^{(k)}) \sqrt{\dot{\gamma}^{(k)}}}_{\mathbb{L}^2}\,,
 \end{equation}
-\cref{eq:2-elfpdist-rot} is equivalent to the optimization problem of the full Procrustes distance defined in \cref{def:2-fpdist}.
+\cref{eq:2-elfpdist-rot} is equivalent to the optimisation problem of the full Procrustes distance defined in \cref{def:2-fpdist}.
 Following \cref{lem:2-fpdist} ii.), the solution is given by the Procrustes fit of $(\widetilde q_2 \circ \gamma^{(k)}) \sqrt{\dot\gamma^{(k)}}$ onto $\widetilde q_1$ with 
 \begin{equation}
   \label{eq:2-elfpdist-rot-opt}
   \omega^{(k)} =\langle (\widetilde q_2 \circ \gamma^{(k)}) \sqrt{\dot\gamma^{(k)}},\, \widetilde q_1 \rangle
 \end{equation}
-For fixed rotation and scaling $\omega^{(k)} \in \mathbb{C}$ the optimization problem over $\gamma \in \Gamma$ is given by 
+For fixed rotation and scaling $\omega^{(k)} \in \mathbb{C}$ the optimisation problem over $\gamma \in \Gamma$ is given by 
 \begin{equation}
   \label{eq:2-elfpdist-wrp}
   \gamma^{(k+1)} = \arginf_{\gamma \in \Gamma}\,\, \norm{\widetilde q_1 - (\omega^{(k)} \widetilde q_2 \circ \gamma) \sqrt{\dot\gamma}}_{\mathbb{L}^2}\,.
 \end{equation}
-Again,\cref{eq:2-elfpdist-wrp} is equivalent to the optimization problem of the elastic distance defined in \cref{def:2-eldist}, when aligning the parametrization of the normalized SRV curve $\widetilde q_1$ and the rotation and scaling aligned, normalized SRV curve $\omega^{(k)} q_2$.
-A solution $\gamma^{(k+1)}$ can be found by applying known optimization techniques such as a dynamical programming algorithm or a gradient based method.
+Again,\cref{eq:2-elfpdist-wrp} is equivalent to the optimisation problem of the elastic distance defined in \cref{def:2-eldist}, when aligning the parametrization of the normalised SRV curve $\widetilde q_1$ and the rotation and scaling aligned, normalised SRV curve $\omega^{(k)} q_2$.
+A solution $\gamma^{(k+1)}$ can be found by applying known optimisation techniques such as a dynamical programming algorithm or a gradient based method.
 In this thesis we will use the methods laid out in \cite{Steyer2021} and implemented in the \texttt{R} package \texttt{elasdics} \parencite{elasdics} for solving \cref{eq:2-elfpdist-wrp} in the setting of sparse and irregularly sampled curves.
 
 \begin{algorithm}[Elastic full Procrustes distance]
   \label{alg:2-dist}
-  $\beta_1, \beta_2$ absolutely continous planar curves with SRV curves $q_1, q_2 \in \mathbb{L}^2([0,1], \mathcal{C})$ and normalized SRV curves $\widetilde q_i = \frac{q_i}{\norm{q_i}}$.
+  $\beta_1, \beta_2$ absolutely continuous planar curves with SRV curves $q_1, q_2 \in \mathbb{L}^2([0,1], \mathcal{C})$ and normalised SRV curves $\widetilde q_i = \frac{q_i}{\norm{q_i}}$.
   Set $\gamma^{(0)}(t) = t$  as the initial parametrization alignment.
   Set $k = 0$. 
   \begin{enumerate}
@@ -311,13 +311,13 @@ In this thesis we will use the methods laid out in \cite{Steyer2021} and impleme
 \section{The Elastic Full Procrustes Mean for Planar Curves}
 \label{sec:2-mean}
 We now want to use the elastic Full Procrustes distance to calculate shape means for sets of planar curves.
-Again, we assume all curves to be absolutely continous $\beta_i \in \mathcal{AC}([0,1],\, \mathbb{C})$ with corresponding SRV curves $q_i \in \mathbb{L}^2([0,1],\, \mathbb{C})$, $i=1,\dots,N$.
-We can take into account invariance with respect to shape-preserving transformations by defining the mean as a minimizer over the sum of squared elastic full Procrustes distances between the shape of each curve and a mean shape.
+Again, we assume all curves to be absolutely continuous $\beta_i \in \mathcal{AC}([0,1],\, \mathbb{C})$ with corresponding SRV curves $q_i \in \mathbb{L}^2([0,1],\, \mathbb{C})$, $i=1,\dots,N$.
+We can take into account in-variance with respect to shape-preserving transformations by defining the mean as a minimizer over the sum of squared elastic full Procrustes distances between the shape of each curve and a mean shape.
 If the resulting mean is a global minimum, it is usually called a \enquote{sample Fr\'echet mean} \parencite{Frechet1948}, if it is a local minimum a \enquote{sample Karcher mean} \parencite{Karcher1977} \parencite[see][111]{DrydenMardia2016}.
 
 \begin{definition}[Elastic full Procrustes mean]
   \label{def:2-mean}
-  For a set of curves $\beta_i \in \mathcal{AC}([0,1],\, \mathbb{C})$, $i = 1,\dots,N$,  their \emph{elastic full Procrustes mean} is given by a minimizing shape $\hat{[\mu]}$ with
+  For a set of curves $\beta_i \in \mathcal{AC}([0,1],\, \mathbb{C})$, $i = 1,\dots,N$,  their \emph{elastic full Procrustes mean} is given by a minimising shape $\hat{[\mu]}$ with
   \begin{equation}
     \label{eq:2-mean-def}
     \hat{[\mu]} = \arginf_{[\mu] \in \mathcal{S}} \sum_{i=1}^N d_{EF}([\mu], [\beta_i])^2\,,
@@ -325,26 +325,26 @@ If the resulting mean is a global minimum, it is usually called a \enquote{sampl
   where $\mathcal{S} = \left\{ [\beta] : \beta \in \mathcal{AC}([0,1],\,\mathbb{C}) \right\}$ is the shape space.
 \end{definition}
 
-\noindent In practice, we will always solve \cref{eq:2-mean-def} directly on SRV level, by using the definition of the elastic full Procrustes distance (see \cref{def:2-elfpdist}) and writing it as an optimization problem over a normalized SRV mean function.
+\noindent In practice, we will always solve \cref{eq:2-mean-def} directly on SRV level, by using the definition of the elastic full Procrustes distance (see \cref{def:2-elfpdist}) and writing it as an optimisation problem over a normalised SRV mean function.
 \begin{equation}
   \label{eq:2-mean-def-srv}
   \hat\mu_q = \argmin_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
   \sum_{i=1}^N \, \left( \inf_{\omega_i \in \mathbb{C}, \gamma_i \in \Gamma} \,
     \norm{\mu_q - \omega_i (\widetilde q_i \circ \gamma_i) \sqrt{\dot\gamma_i}} \right)^2\,.
 \end{equation}
-The estimated normalized SRV mean $\hat{\mu}_q$ then defines a representative unit-length mean $\hat{\mu} \in \hat{[\mu]}$ by integration $\hat\mu(t) = \hat\mu(0) + \int_0^t \hat\mu_q(s) \norm{\hat\mu_q(s)}\,ds$ (compare \cref{eq:2-norm}), which is unique up to translation $\hat\mu(0)$.
+The estimated normalised SRV mean $\hat{\mu}_q$ then defines a representative unit-length mean $\hat{\mu} \in \hat{[\mu]}$ by integration $\hat\mu(t) = \hat\mu(0) + \int_0^t \hat\mu_q(s) \norm{\hat\mu_q(s)}\,ds$ (compare \cref{eq:2-norm}), which is unique up to translation $\hat\mu(0)$.
 When re-constructing $\hat\mu$ from $\hat\mu_q$, one may decide to set $\hat\mu(0)$ to a certain value depending on the application.
 In particular, setting $\hat\mu(0) = 0$, so that the mean curve starts at the origin, makes sense when the object represented by the mean curve has a \enquote*{natural} starting point shared across all objects of this type.
-An example, explored in \cref{sec:4-tounges} are tounge shapes, which all connect to the back of the mouth on one end.
-Another possibility would be to choose a $\hat\mu(0)$ that centers the mean curve, by setting $\hat\mu(0) = \int_0^1 \int_0^t \hat\mu_q(s) \norm{ \hat\mu_q(s)}\,ds\,dt$.
+An example, explored in \cref{sec:4-tounges} are tongue shapes, which all connect to the back of the mouth on one end.
+Another possibility would be to choose a $\hat\mu(0)$ that centres the mean curve, by setting $\hat\mu(0) = \int_0^1 \int_0^t \hat\mu_q(s) \norm{ \hat\mu_q(s)}\,ds\,dt$.
 From the point of shape analysis, the choice of representation does not make a difference, as both mean curves are elements of $\hat{[\mu]}$ and therefore have the same shape.
-However, the distinction becomes important when the estimated mean curve $\hat\mu$ is used in concert with other curves, for example in visualizing multiple curves or in comparing multiple class mean shapes, as those do not typically share the same center or starting point.
+However, the distinction becomes important when the estimated mean curve $\hat\mu$ is used in concert with other curves, for example in visualising multiple curves or in comparing multiple class mean shapes, as those do not typically share the same centre or starting point.
 
-Turning back to the calculation of $\hat\mu_1$, we can simplify \cref{eq:2-mean-def-srv} by applying the following Lemma, which uses the analytical solution for the optimization over rotation in the full Procrustes distance (see \cref{lem:2-fpdist} i.). 
+Turning back to the calculation of $\hat\mu_1$, we can simplify \cref{eq:2-mean-def-srv} by applying the following Lemma, which uses the analytical solution for the optimisation over rotation in the full Procrustes distance (see \cref{lem:2-fpdist} i.). 
 
 \begin{lemma}
   \label{lem:2-elfpdist}
-  Let $\beta_1, \beta_2$ be two absolutely continuous planar curves with corresponding shape $[\beta_1], [\beta_2]$. Let $\widetilde q_1, \widetilde q_2$ be the respective normalized SRV curves.
+  Let $\beta_1, \beta_2$ be two absolutely continuous planar curves with corresponding shape $[\beta_1], [\beta_2]$. Let $\widetilde q_1, \widetilde q_2$ be the respective normalised SRV curves.
   The elastic full Procrustes distance is given by
   \begin{equation}
     d([\beta_1],[\beta_2]) = \inf_{\gamma \in \Gamma} \quad \sqrt{ 1 - \langle \widetilde q_1, ( \widetilde q_2 \circ \gamma) \sqrt{\dot\gamma} \rangle \langle (\widetilde q_2 \circ \gamma) \sqrt{\dot\gamma}, \widetilde q_1 \rangle }
@@ -361,12 +361,12 @@ Turning back to the calculation of $\hat\mu_1$, we can simplify \cref{eq:2-mean-
   \hat\mu_q = &\, \argmax_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
     \sum_{i=1}^N \,\sup_{\gamma_i \in \Gamma}\, \langle \mu_q,\,(\widetilde q_i \circ \gamma_i) \sqrt{\dot\gamma_i} \rangle \langle (\widetilde q_i \circ \gamma_i) \sqrt{\dot\gamma_i},\, \mu_q\rangle\,
 \end{align}
-and we end up with a two step optimization problem consisting of an outer optimization over $\mu_q$ and an inner optimization over the set $\left\{\gamma_i\right\}_{i=1,\dots,N}$.
+and we end up with a two step optimisation problem consisting of an outer optimisation over $\mu_q$ and an inner optimisation over the set $\left\{\gamma_i\right\}_{i=1,\dots,N}$.
 Similarly to the approaches discussed in \cite{SrivastavaKlassen2016} and to \cite{Steyer2021}, we solve this iteratively by iterative \emph{template based alignment} \parencite[see e.g.][271]{SrivastavaKlassen2016}:
 In each step, the mean $\hat\mu_q$ is estimated while keeping the parametrizations $\gamma_i$ fixed, after which the $\gamma_i$ are updated by calculating the warping alignment of the full Procrustes fit of each $\widetilde q_i$ onto $\hat\mu_q$.\footnote{Note that this is \emph{not} the same as performing an elastic full Procrustes fit of $\widetilde q_i$ onto $\hat \mu_q$ in each step $k$, because the warping and Procrustes alignments are themselves not iterated over.}
 Mean estimation and warping alignment are iterated until the mean shape has converged.
 
-Let us consider the outer optimization problem in step $k$ for a fixed set of warping functions $\{\gamma_i^{(k)}\}_{i=1,\dots,N}$ with corresponding warping aligned normalized SRV curves $\widetilde q_i^{(k)} = ( \widetilde q_i \circ \gamma_i^{(k)}) \sqrt{\dot\gamma_i^{(k)}}$.
+Let us consider the outer optimisation problem in step $k$ for a fixed set of warping functions $\{\gamma_i^{(k)}\}_{i=1,\dots,N}$ with corresponding warping aligned normalised SRV curves $\widetilde q_i^{(k)} = ( \widetilde q_i \circ \gamma_i^{(k)}) \sqrt{\dot\gamma_i^{(k)}}$.
 Note that if no warping alignment has happened yet, we can always set $\gamma_i^{(0)}(t) = t$ for all $i=1,\dots,N$ as a starting value.
 The problem we have to solve is
 \begin{align}
@@ -380,7 +380,7 @@ We can reformulate this by writing out the complex functional scalar products $\
   \hat\mu_q^{(k)} = &\, \argmax_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
     \int_0^1 \int_0^1 \overline{\mu_q (s)} \left( \sum_{i=1}^N\, \widetilde q_i^{(k)}(s) \overline{ \widetilde q_i^{(k)}(t)} \right) \mu_q(t) \ds\dt
 \end{align}
-We can identify the inner term as proportional to a sample estimator $\check{C}^{(k)}(s,t) = \frac{1}{N} \sum_{i=1}^N \widetilde q_i^{(k)}(s) \overline{\widetilde q_i^{(k)}(t)}$ of the population covariance surface of the normalized SRV curves $C^{(k)}(s,t) = \mathbb{E}[\widetilde q^{(k)}(s) \overline{\widetilde q^{(k)}(t)}]$, when noting that $\mathbb{E}[\widetilde q^{(k)}(t)] = 0$ for all $t \in [0,1]$ due to rotational symmetry.
+We can identify the inner term as proportional to a sample estimator $\check{C}^{(k)}(s,t) = \frac{1}{N} \sum_{i=1}^N \widetilde q_i^{(k)}(s) \overline{\widetilde q_i^{(k)}(t)}$ of the population covariance surface of the normalised SRV curves $C^{(k)}(s,t) = \mathbb{E}[\widetilde q^{(k)}(s) \overline{\widetilde q^{(k)}(t)}]$, when noting that $\mathbb{E}[\widetilde q^{(k)}(t)] = 0$ for all $t \in [0,1]$ due to rotational symmetry.
 \begin{equation}
 \hat\mu_q^{(k)} = \, \argmax_{\mu_q \in \mathbb{L}^2,\,\norm{\mu_q} = 1}\,\,
     N\cdot\int_0^1 \int_0^1 \overline{\mu_q (s)} \check C^{(k)}(s,t) \mu_q(t) \ds\dt
@@ -398,13 +398,13 @@ We can rewrite this again as a functional scalar product by considering the \emp
 \end{equation}
 This is a well known problem in the context of functional principal component analysis (FPCA), but typically only for real-valued covariance operators.
 From $\overline{C(s,t)} = \overline{\mathbb{E}[\widetilde q(s)\overline{\widetilde q(t)}]} = \mathbb{E}[\widetilde q(t)\overline{\widetilde q(s)}] = C(t,s)$ it follows that $\left\langle \mu_q, C \mu_q \right\rangle = \left\langle C \mu_q, \mu_q \right\rangle$ and therefore that $C$ is a \emph{self-adjoint} operator.
-The optimization problem then reduces to an eigenfunction problem 
+The optimisation problem then reduces to an eigenfunction problem 
 \begin{equation}
   \label{eq:funceig}
   C^{(k)} u^{(k)} = \lambda^{(k)} u^{(k)} \quad \Leftrightarrow \quad \int_0^1 C^{(k)}(s, t) u^{(k)}(t)\, dt = \lambda^{(k)} u^{(k)}(s)\,,
 \end{equation}
-where $\lambda^{(k)} = \left\langle \mu_q,\, C^{(k)} \mu_q \right\rangle$ is the target function to maximize.
-For normalized eigenfunctions $u^{(k)}_1, u^{(k)}_2,\,\dots$ and corresponding eigenvalues $\lambda^{(k)}_1 \geq \lambda^{(k)}_2 \geq \dots$ of $C^{(k)}(s,t)$, the expectation $\mathbb{E}[\hat\mu_q^{(k)}(t)]$ is given by the leading normalized eigenfunction $u^{(k)}_1(t)$ of $C^{(k)}(s,t)$ \parencite[see][153,397]{RamsaySilverman2005}.
+where $\lambda^{(k)} = \left\langle \mu_q,\, C^{(k)} \mu_q \right\rangle$ is the target function to maximise.
+For normalised eigenfunctions $u^{(k)}_1, u^{(k)}_2,\,\dots$ and corresponding eigenvalues $\lambda^{(k)}_1 \geq \lambda^{(k)}_2 \geq \dots$ of $C^{(k)}(s,t)$, the expectation $\mathbb{E}[\hat\mu_q^{(k)}(t)]$ is given by the leading normalised eigenfunction $u^{(k)}_1(t)$ of $C^{(k)}(s,t)$ \parencite[see][153,397]{RamsaySilverman2005}.
 
 We will estimate $C^{(k)}(s,t)$ using the methods for covariance estimation from sparse and irregular observations laid out in \cref{sec:3}.
 Given such an estimate $\hat C^{(k)}(s,t)$, we can calculate the elastic full Procrustes mean by the following algorithm.
